--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My project</title>
+    <title>Your Life,a Photo</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../scss/main.css" />
   </head>
   <body>
     <h1>Hello world</h1>
