--- a/src/public/index.html
+++ b/src/public/index.html
@@ -23,6 +23,13 @@
     <link rel="stylesheet" href="../scss/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="backgroundgray">
+      <h1 class="text text-green">Hello world</h1>
+      <h1 class="title text-white">Hello world</h1>
+    </div>
+
+    <div>
+      <h1>Hello world</h1>
+    </div>
   </body>
 </html>
