Component button create

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -26,6 +26,8 @@
     <div class="backgroundgray">
       <h1 class="text text-green">Hello world</h1>
       <h1 class="title text-white">Hello world</h1>
+
+      <button class="btn-default">Hello world</button>
     </div>
 
     <div>
