--- a/src/public/index.html
+++ b/src/public/index.html
@@ -23,15 +23,180 @@
     <link rel="stylesheet" href="../scss/main.css" />
   </head>
   <body>
-    <div class="backgroundgray">
-      <h1 class="text text-green">Hello world</h1>
-      <h1 class="title text-white">Hello world</h1>
+    <main class="main">
+      <nav class="main__nav">
+        <ul class="nav justify-content-center align-items-center mt-4">
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              Home
+            </a>
+          </li>
 
-      <button class="btn-default">Hello world</button>
-    </div>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              PhotoApp
+            </a>
+          </li>
 
-    <div>
-      <h1>Hello world</h1>
-    </div>
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              <img src="../assets/images/camera-white.png" alt="Logo White" />
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              Design
+            </a>
+          </li>
+
+          <li class="nav-item">
+            <a href="#" class="nav-link">
+              Download
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="main__text text-center">
+        <h1 class="text-white title">Your Life, a Photo</h1>
+        <p class="text-white">print your life in a simple photo</p>
+        <button class="btn btn-lg btn-default">Get Started</button>
+      </div>
+
+      <div class="main__socialmedia mb-4">
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a href="" class="nav-link fab fa-twitter"> </a>
+          </li>
+
+          <li class="nav-item">
+            <a href="" class="nav-link fab fa-flickr"> </a>
+          </li>
+
+          <li class="nav-item">
+            <a href="" class="nav-link fab fa-dribbble"> </a>
+          </li>
+        </ul>
+      </div>
+    </main>
+
+    <section class="submain backgroundgray">
+      <div class="container">
+        <div class="row">
+          <div class="submain__text col-12 col-md-6 col-lg-6 mt-5">
+            <h3 class="text-green title mb-3">
+              Rapppresent Your Life With a Simple Photo
+            </h3>
+            <p class="text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam
+              sunt, voluptas excepturi aspernatur tempore recusandae maxime.
+              Culpa sequi minus blanditiis aliquam, iusto modi adipisci
+              doloremque aspernatur, pariatur, distinctio doloribus molestias?
+            </p>
+            <button class="btn btn-lg btn-default mt-3">Get Started</button>
+          </div>
+
+          <div class="submain__image col-12 col-md-6 col-lg-6 mt-5">
+            <img src="../assets/images/iphone.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="design">
+      <div class="container">
+        <div class="row">
+          <div
+            class="design_image col-12 col-md-6 col-lg-7  mt-5 order-2 order-md-1"
+          >
+            <img src="../assets/images/iphone-green.png" alt="" />
+          </div>
+
+          <div
+            class="design_text col-12 col-md-6 col-lg-5 mt-5 order-1 order-md-2"
+          >
+            <h3 class="text-green title mb-3">
+              Design
+            </h3>
+            <p class="text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam
+              sunt, voluptas excepturi aspernatur tempore recusandae maxime.
+              Culpa sequi minus blanditiis aliquam, iusto modi adipisci
+              doloremque aspernatur, pariatur, distinctio doloribus molestias?
+            </p>
+            <button class="btn btn-lg btn-default mt-3">Learn More</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="community backgroundgray">
+      <div class="container">
+        <div class="row">
+          <div
+            class="community__text text-center col-sm-12 col-lg-3 mt-5 mt-5"
+          >
+            <img src="../assets/images/camera-green.png" alt="Camera Green" />
+            <h4 class="mt-3 mb-3">
+              Our Community
+            </h4>
+            <p class="text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </p>
+          </div>
+
+          <div class="community__image col-md-12 col-lg-9 mt-5 mb-5">
+            <div class="container">
+              <div class="row">
+                <div class="col col-md-6 mb-3">
+                  <img src="../assets/images/image1.png" alt="" />
+                </div>
+
+                <div class="col col-md-6">
+                  <img src="../assets/images/image2.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="subscribe">
+      <div class="container text-center">
+        <h3 class="text-white title mb-3">Subscribre to us Community</h3>
+        <input placeholder="Your Email"><span><a href="#" class="fas fa-check"></a></span></input>
+      </div>
+    </section>
+
+    <section class="download backgroundgray"> 
+      <div class="row">
+        <div class="container">
+        <div class="download__text text-center mt-5 mb-5">
+          <h3 class="mb-3 title">Download IT</h3>
+          <p class="mb-5 text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, repellat, laborum nobis consequatur unde, expedita voluptatem officia ab reprehenderit labore culpa. Aut ipsam commodi repellendus quia quisquam maxime eveniet sequi!</p>
+          <button>Apple Store</button><span class="mr-3"><a href="#" class="fas fa-play"></a></span>
+          <button>Play Store</button><span><a href="#" class="fab fa-apple"></a></span>
+        </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+      <div class="row mt-5">
+          <div class="footer__text col-10">
+            <p class="text">Credits <span>|</span> Privacy <span>|</span> Our Teams</p>
+            
+            <p class="text">Copyright by phototime • all right reserved</p>
+          </div>
+
+          <div class="footer__image col-2">
+            <img src="../assets/images/camera-green.png" alt="">
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
